--- a/index.html
+++ b/index.html
@@ -134,8 +134,10 @@
               <span class="tech-tag">Pandas</span>
               <span class="tech-tag">Visualization</span>
             </div>
-            <a href="#" target="_blank" class="project-link"><i class="fas fa-external-link-alt"></i> View Project</a>
-          </div>
+            <a href="https://github.com/Rayhane-aissa/Airline_passenger_classification" target="_blank" class="project-link">
+              <i class="fas fa-external-link-alt"></i> View Project on GitHub
+            </a>
+            
         </div>
       </section>
 
